--- a/Pratica004/news-homepage-main/estilos/midiaquery.css
+++ b/Pratica004/news-homepage-main/estilos/midiaquery.css
@@ -33,6 +33,16 @@ header {
     font-family: 'DM Serif Display', serif;
 }
 
+#menuzinho {
+    display: none;
+    font-size: 1.8em;
+    padding-top: 5px;
+    color: black;
+    cursor: pointer;
+    margin-left: calc(75% - 15px);
+    
+}
+
 .menu {
     text-align: right;
     width: 100%;
